--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,3 +18,13 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+  - name: "tiktoks"
+    label: "TikTok Embeds"
+    files:
+    - label: "Tiktoks"
+      name: "tiktoks"
+      file: "_tiktok/tiks.yaml"
+      fields:
+        - { label: 'Recent Tiktok', name: 'recent_tiktok', widget: 'string'}    
+        - {label: "Publish Date", name: "date", widget: "datetime"}
